...
    return Scaffold(
      appBar: AppBar(
        title: Row(
          children: [
            Icon(Icons.card_giftcard, color:  Color.fromARGB(255, 111, 6, 120), size: 35),
            SizedBox(width: 8), 
            Text('Hedieaty', style: TextStyle(fontWeight: FontWeight.bold,color: Color.fromARGB(255, 111, 6, 120),fontSize: 30)),
          ],
        ),
        centerTitle: false,
      ),
      body: Padding(
        padding: const EdgeInsets.all(16.0),
...
              SizedBox(height: 20),
              _isLoading
                  ? Center(child: CircularProgressIndicator())
                  : ElevatedButton(
                      onPressed: _login,
                      child: Text(
                        'Log In',
                        style: TextStyle(color: Colors.white, fontWeight: FontWeight.bold),
                      ),
                      style: ElevatedButton.styleFrom(
                        padding: EdgeInsets.symmetric(vertical: 16, horizontal: 16),
                        textStyle: TextStyle(fontSize: 25),
                        backgroundColor:Color.fromARGB(255, 111, 6, 120), 
...
