...
    return Scaffold(
      appBar: AppBar(
        title: Row(
          children: [
            Icon(Icons.card_giftcard_outlined, color:  Color.fromARGB(255, 111, 6, 120), size: 23),
            SizedBox(width: 1), 
            Text('Gifts For Event', style: TextStyle(fontSize: 20,fontWeight: FontWeight.bold, color:  Color.fromARGB(255, 111, 6, 120))),],),
        actions: [
          SortingUtils.buildSortMenu(
            sortOption: _sortOption,
            ascending: _ascending,
            onSortOptionChanged: (sortOption) {
              setState(() {
...
                                final userId = FirebaseAuth.instance.currentUser!.uid;
                                await giftController.pledgeGift(gift.giftId, userId);
                                // No need to call setState() since StreamBuilder handles updates
                              },
                              icon: const Icon(Icons.add, color: Colors.white, size: 30),
                              label: const Text(
                                'Pledge Gift',
                                style: TextStyle(
                                  color: Colors.white,
                                  fontSize: 24,
                                  fontWeight: FontWeight.bold,
                                ),
                              ),
...
